-- --------------------------------------------------------
-- Host:                         127.0.0.1
-- Server version:               11.7.2-MariaDB-log - mariadb.org binary distribution
-- Server OS:                    Win64
-- HeidiSQL Version:             12.8.0.6908
-- --------------------------------------------------------

/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET NAMES utf8 */;
/*!50503 SET NAMES utf8mb4 */;
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */;
/*!40103 SET TIME_ZONE='+00:00' */;
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */;
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;


-- Dumping database structure for ljn_db
CREATE DATABASE IF NOT EXISTS `absen_sd` /*!40100 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci */;
USE `absen_sd`;

-- Dumping structure for table ljn_db.admin_users
CREATE TABLE IF NOT EXISTS `admin_users` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `username` varchar(50) NOT NULL,
  `email` varchar(100) NOT NULL,
  `password_hash` varchar(255) NOT NULL,
  `full_name` varchar(100) NOT NULL,
  `phone` varchar(20) DEFAULT NULL,
  `address` text DEFAULT NULL,
  `department` varchar(100) DEFAULT NULL,
  `position` varchar(100) DEFAULT NULL,
  `bio` text DEFAULT NULL,
  `role` enum('super_admin','admin') DEFAULT 'admin',
  `is_active` tinyint(1) DEFAULT 1,
  `created_at` timestamp NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  PRIMARY KEY (`id`),
  UNIQUE KEY `username` (`username`),
  UNIQUE KEY `email` (`email`)
) ENGINE=InnoDB AUTO_INCREMENT=4 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- Dumping data for table ljn_db.admin_users: ~1 rows (approximately)
INSERT INTO `admin_users` (`id`, `username`, `email`, `password_hash`, `full_name`, `phone`, `address`, `department`, `position`, `bio`, `role`, `is_active`, `created_at`, `updated_at`) VALUES
	(1, 'admin', 'admin@company.com', '$2a$12$5TjbG6/4/hPqdnd5EAFuzOBtLvsmzH7OPAt45kcCV5zXLtAJNJmUa', 'System Administrator', '+62 812-9999-8888', 'Jl. Baru No. 456, Jakarta', 'IT Department Updated', 'Senior System Administrator', 'System Absensi Berbasis Face Recognition', 'super_admin', 1, '2025-08-25 09:00:23', '2025-10-16 05:54:29')
ON DUPLICATE KEY UPDATE 
    username=VALUES(username),
    email=VALUES(email),
    password_hash=VALUES(password_hash),
    full_name=VALUES(full_name),
    phone=VALUES(phone),
    address=VALUES(address),
    department=VALUES(department),
    position=VALUES(position),
    bio=VALUES(bio),
    role=VALUES(role),
    is_active=VALUES(is_active),
    updated_at=VALUES(updated_at);

-- Dumping structure for table ljn_db.attendance
CREATE TABLE IF NOT EXISTS `attendance` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `employee_id` int(11) NOT NULL,
  `check_in` datetime DEFAULT NULL,
  `check_out` datetime DEFAULT NULL,
  `check_in_image` varchar(255) DEFAULT NULL,
  `check_out_image` varchar(255) DEFAULT NULL,
  `check_in_location` varchar(255) DEFAULT NULL,
  `check_out_location` varchar(255) DEFAULT NULL,
  `status` enum('present','late','absent','half_day') DEFAULT 'present',
  `notes` text DEFAULT NULL,
  `created_at` timestamp NULL DEFAULT current_timestamp(),
  PRIMARY KEY (`id`),
  KEY `idx_attendance_employee` (`employee_id`),
  KEY `idx_attendance_date` (`check_in`),
  CONSTRAINT `attendance_ibfk_1` FOREIGN KEY (`employee_id`) REFERENCES `employees` (`id`) ON DELETE CASCADE
) ENGINE=InnoDB AUTO_INCREMENT=17 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- Dumping data for table ljn_db.attendance: ~5 rows (approximately)
INSERT IGNORE INTO `attendance` (`id`, `employee_id`, `check_in`, `check_out`, `check_in_image`, `check_out_image`, `check_in_location`, `check_out_location`, `status`, `notes`, `created_at`) VALUES
	(4, 4, '2025-09-06 08:45:55', '2025-09-06 09:47:59', 'employee-1756972675039-85326764', 'employee-1756972675039-85326764', 'kantor', 'kantor', 'present', 'hadir', '2025-09-06 01:48:30'),
	(11, 4, '2025-09-10 09:55:23', NULL, 'attendance-1757472920774-598272914.jpg', NULL, 'kantor', NULL, 'late', 'check-in', '2025-09-10 02:55:23'),
	(12, 4, '2025-09-18 14:53:14', NULL, 'attendance-1758181991911-971082106.jpg', NULL, 'kantor', NULL, 'late', 'check-in', '2025-09-18 07:53:14'),
	(13, 4, '2025-10-12 09:17:35', NULL, 'attendance-1760235452407-14174873.jpg', NULL, 'kantor', NULL, 'late', 'check-in', '2025-10-12 02:17:35'),
	(15, 5, '2025-11-05 14:18:32', '2025-11-05 14:18:46', 'attendance-1762327111872-201538934.jpg', 'attendance-1762327125420-696949712.jpg', NULL, NULL, 'late', NULL, '2025-11-05 07:18:32');

-- Dumping structure for table ljn_db.employees
CREATE TABLE IF NOT EXISTS `employees` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `employee_id` varchar(20) NOT NULL,
  `full_name` varchar(100) NOT NULL,
  `email` varchar(100) DEFAULT NULL,
  `phone` varchar(20) DEFAULT NULL,
  `position` varchar(100) DEFAULT NULL,
  `department` varchar(100) DEFAULT NULL,
  `gender` enum('male','female') DEFAULT 'male',
  `address` text DEFAULT NULL,
  `hire_date` date DEFAULT NULL,
  `is_active` tinyint(1) DEFAULT 1,
  `created_at` timestamp NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  PRIMARY KEY (`id`),
  UNIQUE KEY `employee_id` (`employee_id`),
  KEY `idx_employee_id` (`employee_id`)
) ENGINE=InnoDB AUTO_INCREMENT=6 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- Dumping data for table ljn_db.employees: ~3 rows (approximately)
INSERT IGNORE INTO `employees` (`id`, `employee_id`, `full_name`, `email`, `phone`, `position`, `department`, `gender`, `address`, `hire_date`, `is_active`, `created_at`, `updated_at`) VALUES
	(1, 'EMP001', 'John Doe', 'john.doe@company.com', '08123456789', 'Software Developer', 'IT Department', 'male', 'Address not specified', '2024-01-01', 1, '2025-08-25 09:00:23', '2025-08-27 04:24:14'),
	(4, '1C4112', 'carisa rahmanda ryanti', 'carisaryanti@gmail.com', '082132052907', 'Manager', 'IT', 'female', 'jl.perum pesona singosari', '2025-09-03', 1, '2025-09-03 08:33:31', '2025-09-03 08:33:31'),
	(5, 'A71V', 'MOCHAMAD ZULVIYAN', 'zulviyan07@gmail.com', '08818411915', 'Staff', 'IT', 'male', 'jl.h.alwi', '2025-10-20', 1, '2025-10-20 06:38:36', '2025-10-20 06:38:36');

-- Dumping structure for table ljn_db.employee_faces
CREATE TABLE IF NOT EXISTS `employee_faces` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `employee_id` int(11) NOT NULL,
  `face_descriptor` longtext NOT NULL,
  `face_image_path` varchar(255) DEFAULT NULL,
  `is_primary` tinyint(1) DEFAULT 1,
  `created_at` timestamp NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  PRIMARY KEY (`id`),
  KEY `idx_employee_faces_employee` (`employee_id`),
  CONSTRAINT `employee_faces_ibfk_1` FOREIGN KEY (`employee_id`) REFERENCES `employees` (`id`) ON DELETE CASCADE
) ENGINE=InnoDB AUTO_INCREMENT=8 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- Dumping data for table ljn_db.employee_faces: ~1 rows (approximately)
INSERT IGNORE INTO `employee_faces` (`id`, `employee_id`, `face_descriptor`, `face_image_path`, `is_primary`, `created_at`, `updated_at`) VALUES
	(4, 1, '[0.9004961192926673,0.9497086018536463,0.9476239565729174,-0.6089136127095718,-0.019622633023470115,-0.7216307103385242,-0.14674110345682312,-0.03434343165813658,0.4715673131338187,-0.828712267647215,0.15318017655107985,-0.9749058436077043,-0.3806946576512962,-0.8626805861690041,0.45133636060756466,0.9325726917307375,0.6288389255278903,-0.6014647296382516,0.33119613779917056,0.7254501038563412,-0.0720670218812609,0.4382834602328063,-0.09381038217799054,-0.5039944754868295,0.20091148205505416,-0.3902805068011217,0.08357724273442146,0.16694934843365683,-0.008873848997509537,-0.804359210156401,0.8681167445965037,-0.4918256484704293,0.3774478717451948,0.86765244447693,0.03100678012973157,0.5834027886011848,0.15619775156159,0.6866425412643395,-0.45462846586018824,0.04301454841541652,0.5224690462313242,0.18006320337610804,0.6010595793036977,0.04005619768362445,0.8245355191368025,0.02989481340522504,0.388422693992057,0.09234302650199311,-0.5187897607742991,-0.34799363721317045,0.7655295273883342,0.05111126975191027,0.4378871614847428,0.3266886690055282,-0.6584896497267305,0.7475779930484925,0.3184255033426986,-0.1185250211033293,0.23952371510262305,0.8714940566058487,0.3611933878783815,-0.777290734262011,0.31264522182281107,0.7049904900778219,-0.8913267079075995,-0.35727665948855947,0.19836825764579347,-0.6420631642091363,-0.21523480044726728,-0.4805209526180265,-0.338882101165094,-0.22620428547634974,-0.8767187070787421,-0.38657066013185615,0.8351015259097467,-0.954972355032107,-0.41070565181728425,0.2253346019185316,0.4649165684539551,0.904048164267512,0.5314158314756736,0.7173325832814115,0.37116377087168173,0.3673665182073056,0.9815909835863756,0.716135391075599,-0.012190736371658684,-0.652278533814151,0.21562452001341015,0.16604331355127622,-0.7313515723420672,-0.8342877308980583,0.5886819325857471,-0.5298428812472129,-0.761976025066867,-0.9372963510715038,0.12602699391052408,0.5415361798015086,0.941931409651124,0.595358358654591,-0.9415859692980928,-0.11988550805339582,0.6865204870786048,0.38836600520098674,-0.03944370467189229,0.8768752175217265,-0.023472079831080794,0.4378753200276937,-0.991309696873254,0.15147451539575085,0.08018209807197163,0.7151195431721549,-0.0875169886040914,-0.31308294025976835,0.8582281609801843,-0.720507478397018,-0.019024681718338154,-0.5119988023068682,0.09018988202020894,0.35625150091245983,-0.007234252057739532,0.5126719652471645,-0.5463677601762966,-0.5192113462630146,-0.5615059735920735,0.24261131384639745,-0.8252528445327756,0.2245922292815239,-0.4172891743756484,0.14614867794731845,0.9237029981784577,0.863902459020903,-0.48632208124212806,0.411683585400882,0.5296383413713737,-0.18218013659012078,0.8958629014035364,-0.1200669010719313,0.09396745083140523,-0.9509105729577487,0.8864091590301117,-0.7642371868120188,-0.20063792817501858,-0.04173087810097975,0.293767863316333,0.6655502412543344,-0.4670161711327494,-0.5193806471771767,-0.5597049576187292,0.9237792379030743,-0.8458164056287698,0.02321467500195684,-0.11272695582519265,0.5416403321964194,-0.47058153988496,-0.8295551358937137,0.75385158362324,0.7964599284934266,0.6127316466360657,0.77375096882241,-0.10676160529675105,-0.9857870186166804,-0.9076584648938613,0.0857244739068479,-0.5604487122776307,0.3003173068087652,0.18649221391135695,-0.3007608873940044,0.8885448574069628,0.09070828897342809,-0.6625239093924953,0.9085508183526665,0.5454464207007521,0.5981953116566614,0.3722089891237781,-0.44715305607446565,-0.8139069092333906,-0.3693382724450882,-0.007935708782637274,0.46635522502720583,-0.7595670562711465,0.3930051543090092,0.11283329406608811,-0.7002682440172752,-0.171710071932496,0.9763645386606026,-0.038708942042909644,0.12632992104683805,-0.976701995492113,0.8234978874418228,0.1517420941934251,-0.40349716845183137,-0.15656793821883364,-0.4126266976860906,0.147975133885915,-0.6561710928902453,-0.08169512872313467,0.08847232428782092,0.45493799903164156,0.5022528033066225,0.7494911305760632,0.09326328741190615,0.7319241852411174,-0.6939109699361019,-0.8919508537849579,0.9236964851256144,-0.7406316149367149,-0.49375162294926644,-0.39563437118456823,0.9567143841522672,0.3998403586588788,0.40673041096301565,-0.15924133663161566,-0.9112496778324819,0.8477133626592779,0.14160453341036616,0.13162945068602516,-0.819160202645886,0.43244580985208936,0.29382539344036207,0.3078777097941878,0.7513606276772853,0.5064429115414018,0.6948537752593529,0.404876869116912,0.6508919526374712,-0.7212278217281947,0.2525137222128979,-0.4630067876973887,0.563252967748455,0.5441344464303643,0.16671171123867712,0.19779367151784877,0.5848011438402954,-0.753597903990376,0.7193722811238055,-0.9418213917652598,-0.9241629067567554,0.7331399499121702,0.37462079112255164,-0.05820106467236785,0.31412208014082976,0.38853082155015306,-0.0927616528418862,0.19648059898881964,-0.5946762870008873,-0.6013630388724871,0.6979229093509112,-0.35327989553916117,0.48225169457182115,-0.5483978179264124,-0.19574978712767876,-0.255837916865262,-0.44388926157395847,-0.5744266080758607,-0.7174598374479522,-0.5992194584689767,0.6978394955415297,-0.3741722758663655,-0.027731428640012545,-0.5276343672368204,-0.28646728832933466,0.028492663546420882,-0.1907230025149027,-0.5678840098111229,0.8989948367656662,0.12509091605637002,-0.31927246954506705,0.38964211102313095,0.04087767356701111,0.6659636216750431,-0.25310777162958464,-0.97631584697158,-0.4251556200667692,0.29105685638901546,-0.9482400617935358,0.7586577562421364,0.10165009901195354,0.7227396225639651,0.1369368434221876,-0.6811517720716931,-0.2294745780821139,0.25851128566989034,0.8872325887450918,-0.35139035851262035,0.5102127528353715,0.2848072557239294,0.431108431965352,0.7418448456403981,0.5649422719524413,0.024797102000840177,-0.6606370508213617,0.04352645371775399,-0.9912217408508104,0.3609292905286887,-0.745425090452192,-0.05148268509123044,-0.260877125520635,-0.20229667247030347,0.5804538603875242,0.7173129241267242,-0.1226357502679436,-0.4701280814512905,-0.7070739056173796,0.4176859444515486,-0.17170715886063714,-0.13740785317076298,0.9580159176124035,0.16569686121119886,-0.020867568667026326,0.6170626046155725,-0.3743913436902875,0.47205355997753395,-0.9842286273085921,0.05510669331637308,0.7803846364061222,0.5210527539018375,-0.5412385203713206,-0.970757965263509,-0.8738879774357846,-0.9940038705228513,-0.9964733494494089,0.40461294678129356,0.698974470427685,0.47263403866539644,0.9735321044726515,0.7254671121474687,0.23827498988048568,-0.213013375090505,-0.7779815432756223,0.34662171132649533,-0.25174357001552705,0.4139421651077999,-0.8753230824957092,-0.46132326128143264,0.30333660341302204,0.5404715901776926,-0.2968935426224255,0.716095514100783,0.33421234094330554,-0.7233542632042589,-0.2370891794232084,-0.29388878430534904,0.7877943209049598,0.35906745796854667,0.8285652726693282,-0.20094176965300115,0.939777720730544,0.19374800357712152,0.6496888880471925,0.34631059292040867,-0.813782356042283,-0.747899387255218,0.4839803077125735,-0.07113101023914226,-0.5352120544686914,0.9139572916598908,0.98742155905741,-0.7620994849827087,0.37686307744728076,0.3740282074394017,-0.34649889499712616,0.8719976133148255,0.4872772716015361,-0.5348998510351888,-0.965087531428293,-0.4841452855908299,-0.3755452543791087,0.7423359927979569,0.09081008607287444,0.3958117721582566,0.20845356918596325,-0.7655121777032612,-0.5392432824320395,0.1888992160835712,0.061222110881246294,-0.836201657494954,-0.5252688677181174,0.8975672375810704,-0.01666338370306697,0.7211528601491457,0.36520148737317193,-0.4360258032096511,-0.8216769840888554,0.49607259073339005,0.6993798224538978,0.6302339344464873,0.8657626882179152,0.9049577244421445,0.7187981018995147,0.6728482188618754,-0.286668940155836,0.2493102724863232,0.47700654870240555,0.23718303137856278,0.880348402999056,-0.10258910416027867,-0.16368677328473202,-0.7435252135393653,-0.3440873397750801,0.8104945613255397,-0.3208022391006189,0.1681502208377892,-0.8450360738216358,-0.8903642815098207,-0.6687695461128529,-0.6367475892681496,0.7188408003138389,0.5689802716145613,-0.3169051970142349,0.6210118092381207,-0.3443608768529667,0.3116188603081169,0.5728667353799279,-0.204906929789197,0.6527918568784621,-0.4006445454551222,0.8446134209117186,-0.6668735649133679,-0.4751113601367982,-0.9559008067833465,0.18231864446925083,0.19689847133321603,-0.38095086687542157,-0.7407960974268746,0.2339866048565331,-0.9417546431865107,-0.669241978954763,-0.005228442640484499,-0.995767513724986,-0.1218848082054369,0.24433706669860555,0.31273180912678766,-0.34702124741622153,0.9769327702198547,-0.20187454606545252,-0.7291937530487562,0.09693498249272947,0.3622663026888464,0.7476959205325406,-0.04081653508002381,-0.9019361343237038,-0.937657011959395,0.44231622285709316,-0.09171276246494342,0.02872641333022008,-0.38079745259182607,0.6915977191289588,0.6570889022029602,-0.016782192847011768,0.5368910855391653,0.2044296593242172,-0.2682907551258902,-0.6842434556140193,-0.5446373675532121,-0.8579683303325063,-0.997742377051893,-0.7384912491581161,0.26622569853264544,0.8748498974087529,-0.3680033413189512,0.5574728178518673,0.18684291870231284,-0.16831964741292937,-0.2883652089790316,-0.8805019276552475,-0.5271038032566113,0.6576223148750349,-0.35581166029584166,-0.16113759853896648,-0.23957744939777736,0.6174115585636737,-0.02542380716318604,-0.24863652551251958,-0.09559835557177321,0.06078114002741186,0.9689781740444765,-0.10232256990293909,0.9750114550589832,0.1435730720801569,0.9966002863260504,-0.94306554391521,0.42000896959369527,-0.06021933745943375,0.9033091646548095,0.5196183410863378,-0.7498612244601697,0.526111872697665,0.5235591235710291,0.9154055020494516,-0.3718115330862548,-0.8739164570300635,-0.5395280171818877,-0.12586038821285062,0.776049783710782,0.056774627368064934,0.6110498105669819,-0.28068302071111084,-0.14829492650245157,0.04550950673510323,0.8338298820215022,-0.972880262819015,0.356093231902757,0.3915539057451438,-0.1731888145478182,-0.16090471979409982,0.6497950121991125,0.19182613564266493,-0.8611282460367331,0.8095706542191086,-0.8762524186749863,0.8808841935472618]', 'test_face.jpg', 1, '2025-08-28 14:06:51', '2025-10-14 05:32:14'),
	(6, 4, '[-0.10791248828172684,0.06483276933431625,0.10457400232553482,-0.10955696552991867,-0.024434899911284447,-0.053306497633457184,-0.040657054632902145,-0.13987134397029877,0.2076656073331833,-0.16748926043510437,0.17807555198669434,0.014119308441877365,-0.15670277178287506,-0.03784623369574547,0.03885015472769737,0.1397339105606079,-0.17831403017044067,-0.14884784817695618,-0.07789791375398636,-0.044471923261880875,0.0285916980355978,-0.038137733936309814,0.05736657977104187,0.07658287137746811,-0.20040617883205414,-0.3429338037967682,-0.12562614679336548,-0.15702588856220245,-0.007128815166652203,-0.027018385007977486,-0.025809921324253082,0.02740238606929779,-0.14266759157180786,0.007976041175425053,-0.014851877465844154,0.05596515163779259,-0.018414776772260666,-0.009771418757736683,0.17599210143089294,-0.014289375394582748,-0.25667282938957214,-0.04289276897907257,0.0010404944187030196,0.18785996735095978,0.2577546536922455,0.09201546013355255,0.041520897299051285,-0.04968775436282158,0.023751571774482727,-0.2158658504486084,0.03404849022626877,0.09209800511598587,0.032378699630498886,0.06842590868473053,0.03006104566156864,-0.2059195637702942,-0.0038332135882228613,0.06919906288385391,-0.16976603865623474,-0.023483460769057274,-0.004298837389796972,-0.1525738537311554,-0.058733467012643814,0.004701490979641676,0.33038201928138733,0.135304257273674,-0.1721799671649933,-0.10147899389266968,0.19444540143013,-0.15284262597560883,-0.0018197307363152504,0.05213363468647003,-0.1559121459722519,-0.16556216776371002,-0.2287895828485489,0.0021332534961402416,0.3896957039833069,0.1321556568145752,-0.17694401741027832,0.04001918062567711,-0.19135631620883942,0.03264490142464638,0.017931994050741196,0.10985450446605682,-0.036782439798116684,0.02051468938589096,-0.030634814873337746,-0.0224161259829998,0.13221612572669983,-0.05306684598326683,0.013987358659505844,0.2131846696138382,-0.04075712710618973,0.030218446627259254,-0.023727642372250557,-0.00628555566072464,-0.12745113670825958,0.015463322401046753,-0.10338913649320602,-0.07801356911659241,0.028041109442710876,0.04566054791212082,0.0398695133626461,0.13494235277175903,-0.23681429028511047,0.18935321271419525,-0.0030415072105824947,-0.03702006861567497,0.038816701620817184,0.05490749329328537,-0.04544226825237274,-0.13428287208080292,0.1507112979888916,-0.2595645487308502,0.13569852709770203,0.2518731355667114,0.021241454407572746,0.19517414271831512,0.06609800457954407,0.0859423279762268,-0.015103488229215145,0.026022864505648613,-0.21908865869045258,0.042266517877578735,0.10534414649009705,-0.05516912415623665,0.07133463025093079,0.024751542136073112]', 'employee-1756972675039-85326764.jpg', 1, '2025-09-04 07:57:57', '2025-10-14 05:31:24'),
	(7, 5, '[-0.13758471608161926,0.1597621738910675,0.06213703006505966,-0.030906451866030693,-0.021840859204530716,-0.12427625432610512,0.013553662225604057,-0.12436572834849358,0.13031113892793655,-0.03944777883589268,0.30632370710372925,-0.03727716859430075,-0.17658712714910507,-0.20316585898399353,-0.004856628831475973,0.16930361837148666,-0.17794770002365112,-0.08059734478592873,-0.0653433445841074,0.027710380032658577,0.0825841873884201,0.03078892920166254,0.04282357729971409,0.027413805946707726,-0.007024117625405779,-0.33006830513477325,-0.05278661847114563,-0.03427684307098389,0.07348552346229553,-0.05932208150625229,-0.07304791361093521,0.0438408013433218,-0.22716594487428665,-0.1538664773106575,0.02208337699994445,0.08540964499115944,-0.029269056394696236,0.009171420562779531,0.20532985031604767,-0.042984843254089355,-0.2103087678551674,0.028431616723537445,0.07220316678285599,0.2533923536539078,0.2314547449350357,0.07047255523502827,-0.002962317783385515,-0.13491323590278625,0.07069200277328491,-0.15595989674329758,0.050141191110014915,0.1334497183561325,0.11582610011100769,0.06339164078235626,-0.03496449999511242,-0.15240183472633362,-0.032920846715569496,0.08652473241090775,-0.1683419644832611,-0.0015561871696263552,0.07826010882854462,-0.12044195458292961,-0.036043002270162106,-0.04740564711391926,0.21941609680652618,0.04185323230922222,-0.11257019639015198,-0.14907316863536835,0.09942568466067314,-0.15363731980323792,-0.04703863710165024,0.0839466005563736,-0.10949573665857315,-0.16206010431051254,-0.318894699215889,0.06582402251660824,0.32360953092575073,0.08826190233230591,-0.18733475357294083,0.030490679666399956,-0.06036139279603958,-0.03686779364943504,0.10335148870944977,0.14962494373321533,-0.02484128810465336,0.04406343214213848,-0.1022900827229023,-0.002149242500308901,0.16024000942707062,-0.03802948445081711,-0.02458519209176302,0.23545773327350616,-0.0040342677384614944,0.06885547935962677,0.004217396606691182,0.019504508934915066,-0.035463375970721245,0.035440223291516304,-0.1383371204137802,-0.0383517500013113,0.05836021341383457,-0.06001986935734749,0.025653581134974957,0.1329493373632431,-0.15057577937841415,0.1027638241648674,-0.0029724976047873497,0.06906428746879101,0.04109305515885353,-0.04553859494626522,-0.000701857847161591,-0.10080306231975555,0.07675755023956299,-0.1601092591881752,0.254085898399353,0.165813110768795,0.014706992078572512,0.135340116918087,0.10165403410792351,0.11671708896756172,0.0094607537612319,-0.01664132159203291,-0.14236970990896225,0.006840439047664404,0.10404157266020775,-0.010283876559697092,0.17498000711202621,0.007167087402194738]', 'face-1760942389051-632414273.jpg', 1, '2025-10-20 06:39:57', '2025-10-20 06:39:57');

-- Dumping structure for table ljn_db.system_settings
CREATE TABLE IF NOT EXISTS `system_settings` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `setting_key` varchar(100) NOT NULL,
  `setting_value` text DEFAULT NULL,
  `setting_type` enum('string','number','boolean','json') DEFAULT 'string',
  `category` varchar(50) DEFAULT 'general',
  `description` text DEFAULT NULL,
  `is_active` tinyint(1) DEFAULT 1,
  `created_at` timestamp NULL DEFAULT current_timestamp(),
  `updated_at` timestamp NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  PRIMARY KEY (`id`),
  UNIQUE KEY `setting_key` (`setting_key`),
  KEY `idx_settings_key` (`setting_key`),
  KEY `idx_settings_category` (`category`)
) ENGINE=InnoDB AUTO_INCREMENT=20 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- Dumping data for table ljn_db.system_settings: ~18 rows (approximately)
INSERT IGNORE INTO `system_settings` (`id`, `setting_key`, `setting_value`, `setting_type`, `category`, `description`, `is_active`, `created_at`, `updated_at`) VALUES
	(1, 'email_notifications', 'true', 'boolean', 'notifications', 'Enable email notifications', 1, '2025-08-26 10:54:06', '2025-08-26 13:52:54'),
	(2, 'push_notifications', 'true', 'boolean', 'notifications', 'Enable push notifications', 1, '2025-08-26 10:54:06', '2025-09-03 07:57:33'),
	(3, 'sms_notifications', 'true', 'boolean', 'notifications', 'Enable SMS notifications', 1, '2025-08-26 10:54:06', '2025-09-03 07:57:33'),
	(4, 'two_factor_auth', 'true', 'boolean', 'security', 'Enable two-factor authentication', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(5, 'session_timeout', '30', 'number', 'security', 'Session timeout in minutes', 1, '2025-08-26 10:54:06', '2025-08-26 13:52:54'),
	(6, 'password_expiry', '90', 'number', 'security', 'Password expiry in days', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(7, 'work_start_time', '08:00', 'string', 'attendance', 'Default work start time', 1, '2025-08-26 10:54:06', '2025-08-26 13:52:54'),
	(8, 'work_end_time', '17:00', 'string', 'attendance', 'Default work end time', 1, '2025-08-26 10:54:06', '2025-08-26 13:53:24'),
	(9, 'late_threshold', '15', 'number', 'attendance', 'Late threshold in minutes', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(10, 'overtime_enabled', 'true', 'boolean', 'attendance', 'Enable overtime tracking', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(11, 'face_detection_confidence', '0.8', 'number', 'face_recognition', 'Face detection confidence threshold', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(12, 'max_face_images', '4', 'number', 'face_recognition', 'Maximum face images per employee', 1, '2025-08-26 10:54:06', '2025-09-03 07:57:58'),
	(13, 'auto_capture', 'true', 'boolean', 'face_recognition', 'Enable automatic face capture', 1, '2025-08-26 10:54:06', '2025-09-03 07:57:58'),
	(14, 'auto_backup', 'true', 'boolean', 'system', 'Enable automatic backup', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(15, 'backup_frequency', 'daily', 'string', 'system', 'Backup frequency', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(16, 'data_retention', '365', 'number', 'system', 'Data retention in days', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(17, 'language', 'id', 'string', 'ui', 'Default language', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55'),
	(18, 'theme', 'light', 'string', 'ui', 'Default theme', 1, '2025-08-26 10:54:06', '2025-08-26 12:56:55');

/*!40103 SET TIME_ZONE=IFNULL(@OLD_TIME_ZONE, 'system') */;
/*!40101 SET SQL_MODE=IFNULL(@OLD_SQL_MODE, '') */;
/*!40014 SET FOREIGN_KEY_CHECKS=IFNULL(@OLD_FOREIGN_KEY_CHECKS, 1) */;
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40111 SET SQL_NOTES=IFNULL(@OLD_SQL_NOTES, 1) */;
